Fri Aug  8 08:17:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Makefile.am:
          Added missing Svc_Conf_Token_Table.h which was already in the MPC
          file. Thanks to haibin zhang <dragzhb at yahoo dot com dot cn>
          for reporting this

Thu Aug  7 21:59:58 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:

          Added the new test TAO/tests/Bug_3068_Regression.

Thu Aug  7 20:21:29 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Process_Manager.cpp:
        * ace/Asynch_IO.cpp:
        * ace/Pagefile_Memory_Pool.cpp:
        * ace/MEM_IO.cpp:
        * ace/Time_Value.inl:
        * ace/SV_Semaphore_Simple.cpp:
        * ace/Thread_Manager.cpp:
        * ace/MEM_IO.inl:
        * ace/ETCL/ETCL_Interpreter.cpp:
        * ace/UPIPE_Stream.cpp:
        * ace/SOCK_Dgram.cpp:
        * ace/FILE_IO.cpp:
        * ace/OS_NS_unistd.cpp:
        * ace/FIFO_Recv_Msg.inl:
        * ace/CDR_Size.cpp:
        * ace/ACE.cpp:
        * ace/CDR_Stream.cpp:

          Added usage of ACE_Utils::truncate_cast<>
          to get rid of conversion warnings, mostly from size_t
          to ssize_t.

Thu Aug  7 18:02:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          ACE/TAO/CIAO now supports CodeGear C++ Builder 2009

Thu Aug  7 15:28:13 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Monitor_Control/Makefile.am:

          Added source file Null_Network_Interface_Monitor.cpp that
          was overlooked until now.

Wed Aug  6 18:45:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace.mpc:
          Added a few missing header files

Wed Aug  6 18:17:32 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * protocols/ace/HTBP/HTBP_Channel.cpp:
        * ace/SSL/SSL_Asynch_Stream.cpp:
        * performance-tests/TCP/tcp_test.cpp:
        * performance-tests/UDP/udp_test.cpp:
        * tests/Upgradable_RW_Test.cpp: