@@ -1,3 +1,8 @@
+Fri Aug  8 08:36:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Truncate.h:
+          Added missing specializations for Borland C++.
+
 Fri Aug  8 08:17:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Makefile.am:
